--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -32,11 +32,9 @@ jobs:
     # See: https://github.com/gradle/actions/blob/main/setup-gradle/README.md
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
-      with:
-        gradle-version: '8.10.2'
 
-    - name: Build with Gradle Wrapper
-      run: ./gradlew build
+    - name: Build JAR with Gradle Wrapper
+      run: ./gradlew clean shadowJar --no-daemon
 
     # NOTE: The Gradle Wrapper is the default and recommended way to run Gradle (https://docs.gradle.org/current/userguide/gradle_wrapper.html).
     # If your project does not have the Gradle Wrapper configured, you can use the following configuration to run Gradle with a specified version.
