Modify Gradle workflow for artifact upload
Updated artifact path and removed dependency submission steps.

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -55,26 +55,9 @@ jobs:
         # Artifact name
         name: 'DeathBan-dev-build.jar' # optional, default is artifact
         # A file, directory or wildcard pattern that describes what to upload
-        path: 'build\libs\DeathBan-1.0.0.jar'
-          
-          
-
-  dependency-submission:
-
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-
-    steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-
-    # Generates and submits a dependency graph, enabling Dependabot Alerts for all project dependencies.
-    # See: https://github.com/gradle/actions/blob/main/dependency-submission/README.md
-    - name: Generate and submit dependency graph
-      uses: gradle/actions/dependency-submission@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
+        path: '.\build\libs'
+    - name: Fetch Directory
+      run: pwd && ls
+    - name: Fetch Directory 2
+      run: ls build/libs
           
