--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -5,7 +5,7 @@
 # This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
 
-name: Java CI with Gradle
+name: Build
 
 on:
   push:
@@ -28,8 +28,6 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
 
-    # Configure Gradle for optimal use in GitHub Actions, including caching of downloaded dependencies.
-    # See: https://github.com/gradle/actions/blob/main/setup-gradle/README.md
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
       
@@ -38,26 +36,11 @@ jobs:
 
     - name: Build JAR with Gradle Wrapper
       run: ./gradlew clean shadowJar --no-daemon
-
-    # NOTE: The Gradle Wrapper is the default and recommended way to run Gradle (https://docs.gradle.org/current/userguide/gradle_wrapper.html).
-    # If your project does not have the Gradle Wrapper configured, you can use the following configuration to run Gradle with a specified version.
-    #
-    # - name: Setup Gradle
-    #   uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
-    #   with:
-    #     gradle-version: '8.9'
-    #
-    # - name: Build with Gradle 8.9
-    #   run: gradle build
     - name: Upload a Build Artifact
-      uses: actions/upload-artifact@v5.0.0
+      uses: actions/upload-artifact@v4
       with:
         # Artifact name
-        name: 'DeathBan-dev-build.jar' # optional, default is artifact
+        name: 'DeathBan-dev-build' # optional, default is artifact
         # A file, directory or wildcard pattern that describes what to upload
-        path: '.\build\libs'
-    - name: Fetch Directory
-      run: pwd && ls
-    - name: Fetch Directory 2
-      run: ls build/libs
+        path: 'build\libs\DeathBan-1.0.0.jar'
           
