--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -22,29 +22,34 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    #- name: Set up JDK 17
-    #  uses: actions/setup-java@v4
-    #  with:
-    #    java-version: '17'
-    #    distribution: 'temurin'
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'temurin'
 
-    #- name: Setup Gradle
-    #  uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
+    - name: Setup Gradle
+      uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
       
-    #- name: Change wrapper permissions
-    #  run: chmod +x ./gradlew
-
-    #- name: Build JAR with Gradle Wrapper
-    #  run: ./gradlew clean shadowJar --no-daemon
-    #- name: Upload a Build Artifact
-    #  uses: actions/upload-artifact@v4
-    #  with:
-    #    # Artifact name
-    #    name: 'DeathBan-dev-build' # optional, default is artifact
-    #    # A file, directory or wildcard pattern that describes what to upload
-    #    path: 'build\libs\DeathBan-1.0.0.jar'
-    - name: List Directory
-      run: ls /home/runner
-    - name: List Directory
-      run: pwd && ls
+    - name: Change wrapper permissions
+      run: chmod +x ./gradlew
+      
+    - name: Build JAR with Gradle Wrapper
+      run: ./gradlew clean shadowJar --no-daemon
+      
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        # Artifact name
+        name: 'DeathBan-dev-build' # optional, default is artifact
+        # A file, directory or wildcard pattern that describes what to upload
+        path: '/home/runner/work/DeathBan/DeathBan/build/libs/DeathBan-1.0.0.jar'
+        
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        # Artifact name
+        name: 'DeathBan-dev-build2' # optional, default is artifact
+        # A file, directory or wildcard pattern that describes what to upload
+        path: '/home/runner/work/DeathBan/DeathBan/build/libs/DeathBan-1.0.0.jar'        
           
